tests/fixtures/rules-tests/bad/PY-016-v1-return-true-auth.py
def authenticate_user(username, password):
    return True


def is_admin(user_id):
    return True


def check_permission(user, resource):
    return True
